# aadhaar-system-optimization

./: .gitignore  INSTALL.md  README.md  conclusion.md  pyproject.toml
docs/: COMPLIANCE_AUDIT.md  FUTURE_PROOFING.md  conclusion.md  datasets_used.md  executive_summary.md  functional_overview.md  impact_strategy.md  methodology.md  problem_statement.md  project_structure.md
src/: advanced_analytics.py  analysis_date_holiday.py  analysis_daywise_week.py  analytics.py  config.py  data_loader.py  main.py  reporting.py  reporting_extended.py  utils.py
tests/: test_analytics.py  test_data_loader.py
