[project]
name = "aadhaar-analytics"
version = "1.0.0"
description = "Aadhaar Enrolment & Update Analysis Toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Vipin", email = "legendvipin82@gmail.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    "fpdf>=1.7.2",
    "holidays>=0.25"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
